--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.2",
+    "@mui/x-data-grid": "^7.25.0",
+    "@mui/x-date-pickers": "^7.25.0",
     "@nivo/bar": "^0.88.0",
     "@nivo/core": "^0.88.0",
     "@nivo/radial-bar": "^0.88.0",
     "@tailwindcss/vite": "^4.0.3",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "recharts": "^2.15.1",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
